# light-table

./: ARCHITECTURE.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml
docs/: RAW_DEFAULT_LOOK_PLAN.md  RAW_LINEAR_PIPELINE_PLAN.md  RAW_WHITE_BALANCE_PLAN.md
shader/: Cargo.toml
shader/src/: lib.rs
src/: app.rs  color.rs  crop.rs  demosaic.rs  develop.rs  image_io.rs  main.rs  orient.rs  ui.rs
src/gpu/: context.rs  mod.rs  pipelines.rs  textures.rs
